--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Editing Client" %>
 
-<h1>Editing client</h1>
+<h1>Editing Cient</h1>
 
 <%= render "form", client: @client %>
 
