--- a/app/views/invoices/_invoice.html.erb
+++ b/app/views/invoices/_invoice.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id invoice %>">
   <p>
     <strong>Client:</strong>
-    <%= invoice.client_id %>
+    <%= invoice.client.try(:name) %>
   </p>
 
   <p>
