--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title, "New product" %>
+<% content_for :title, "New Product" %>
 
-<h1>New product</h1>
+<h1>New Product</h1>
 
 <%= render "form", product: @product %>
 
