--- a/app/views/tax_rates/new.html.erb
+++ b/app/views/tax_rates/new.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title, "New tax rate" %>
+<% content_for :title, "New Tax Rate" %>
 
-<h1>New tax rate</h1>
+<h1>New Tax Rate</h1>
 
 <%= render "form", tax_rate: @tax_rate %>
 
